--- a/package.json
+++ b/package.json
@@ -6,8 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["rutas", "controlador", "BD MongoDB", "middlewares"],
+  "keywords": [
+    "rutas",
+    "controlador",
+    "BD MongoDB",
+    "middlewares"
+  ],
   "author": "Tali Cabana",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "morgan": "^1.10.1"
+  }
 }
