--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend de una lista de tareas",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "dev": "node --env-file .env --watch index"
   },
   "keywords": [
     "rutas",
